--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="login.php" class="login-button">Вход</a></li>
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
@@ -33,7 +33,7 @@
                         <li>
                             <a href="login.php" class="login-button">Вход</a>
                         </li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
             </div>
