--- a/showFoundPosts.html
+++ b/showFoundPosts.html
@@ -14,9 +14,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
-                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#rides">Търся превоз</a></li>
+                        <li><a href="index.php#rides">Предлагам превоз</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
@@ -27,9 +27,9 @@
                         <li>
                             <span class="icon icon-rightArrow"></span>
                         </li>
-                        <li><a href="index-logged.html#rides">Търся превоз</a></li>
-                        <li><a href="index-logged.html#rides">Предлагам превоз</a></li>
-                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="index.php#rides">Търся превоз</a></li>
+                        <li><a href="index.php#rides">Предлагам превоз</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
             </div>
