--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
         <div class="col-xs-12 col-sm-6 col-md-8">
             <?php if(isset($_SESSION['errorMessage'])): ?>
             <div class="alert alert-danger">
-                <strong>Registraction unsuccessful:  </strong><?= $_SESSION['errorMessage'] ?>
+                <strong>Registration unsuccessful:  </strong><?= $_SESSION['errorMessage'] ?>
             </div>
             <?php endif; ?>
             <form method="post">
