exception messages fixed

--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                         <h1>Вход</h1>
                         <?php if(isset($_SESSION['errorMessage'])): ?>
                         <div class="alert alert-danger">
-                            <strong>Login unsuccessful:  </strong><?= $_SESSION['errorMessage'] ?>
+                            <strong>Неуспешен вход:  </strong><?= $_SESSION['errorMessage'] ?>
                         </div>
                         <?php endif; ?>
                         <form method="post">
