--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
         <div class="col-xs-12 col-sm-6 col-md-8">
             <?php if(isset($_SESSION['errorMessage'])): ?>
             <div class="alert alert-danger">
-                <strong>Registration unsuccessful:  </strong><?= $_SESSION['errorMessage'] ?>
+                <strong>Неуспешна регистрация:  </strong><?= $_SESSION['errorMessage'] ?>
             </div>
             <?php endif; ?>
             <form method="post">
@@ -80,7 +80,7 @@
                     <input type="email" id="email" class="form-control" name="email">
                     <label for="password" class="boxesName">Парола</label>
                     <input type="password" id="password" class="form-control" name="password">
-                    <h5 style="color:white">* Your password must be at least 6 characters.</h5>
+                    <h5 style="color:white">* Паролата трябва да бъде минимум 6 символа.</h5>
                     <label for="confirmPassword" class="boxesName">Потвърди паролата</label>
                     <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
                     <label for="birthday" class="boxesName">Дата на раждане</label>
