finished profile and multiple fixes

--- a/index-logged.html
+++ b/index-logged.html
@@ -18,11 +18,8 @@
                         <li><a href="#rides" class="slide-section">Търся превоз</a></li>
                         <li><a href="#rides" class="slide-section">Предлагам превоз</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
-                    <ul class="list-unstyled">
-
-                    </ul>
-
                 </div>
                 <a class="menuMobile">
                     <span></span>
@@ -39,6 +36,7 @@
                             <a href="#rides" class="slide-section">Предлагам превоз</a>
                         </li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
             </div>
