--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
+                        <li><a href="index.php">Начало</a></li>
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
                         <li><a href="login.php" class="login-button">Вход</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
@@ -27,6 +28,7 @@
                         <li>
                             <span class="icon icon-rightArrow"></span>
                         </li>
+                        <li><a href="index.php">Начало</a></li>
                         <li>
                             <a href="register.php" class="register-button">Регистрация</a>
                         </li>
