--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul class="list-unstyled menuItems">
                         <li><a href="register.php" class="register-button">Регистрация</a></li>
                         <li><a href="login.php" class="login-button">Вход</a></li>
-                        <li><a href="index.php">Отзиви</a></li>
+                        <li><a href="index.php#aboutUs">Отзиви</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
