--- a/profile.html
+++ b/profile.html
@@ -9,56 +9,72 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body id="notLogged">
+<body>
 <div id="header">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-3">
-                <a href="#">Logo</a>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-9">
+            <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
-                        <li><a href="index-logged.html">Идеята</a></li>
-                        <li><a href="#">Търся превоз</a></li>
-                        <li><a href="#">Предлагам превоз</a></li>
+                        <li><a href="index.php">Начало</a></li>
+                        <li><a href="index-logged.html#rides" class="slide-section">Търся превоз</a></li>
+                        <li><a href="index-logged.html#rides" class="slide-section">Предлагам превоз</a></li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
-                <div class="menuMobile">
-                    <a href="#"></a>
+                <a class="menuMobile">
+                    <span></span>
+                </a>
+                <div class="mobileHidden">
+                    <ul class="list-unstyled">
+                        <li>
+                            <span class="icon icon-rightArrow"></span>
+                        </li>
+                        <li><a href="index.php">Начало</a></li>
+                        <li>
+                            <a href="index-logged.html#rides" class="slide-section">Търся превоз</a>
+                        </li>
+                        <li>
+                            <a href="index-logged.html#rides" class="slide-section">Предлагам превоз</a>
+                        </li>
+                        <li><a href="index-logged.html#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div id="w">
-    <div id="content" class="clearfix">
-        <div id="userphoto"><img src="images/14642425_1309125205788946_5505446360160841357_n.jpg" alt="avatar-logo">
+<div id="profile">
+    <div id="vertCent">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-1 col-sm-10 col-md-offset-2 col-md-8">
+                    <div class="well well-sm">
+                        <div class="row">
+                            <div class="col-sm-6 col-md-3">
+                                <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive"/>
+                            </div>
+                            <div class="col-sm-6 col-md-9">
+                                <h3 id="username">Потребителско име:</h3>
+                                <h3 id="name">Име и фамилия:</h3>
+                                <h3 id="birthday">Рожденна дата:</h3>
+                                <h3 id="gender">Пол:</h3>
+                                <h3 id="email">Email:</h3>
+                                <h3 id="phone">Телефон:</h3>
+                                <div class="centerButton">
+                                    <button class="btn btn-danger" type="submit">Излез</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <h1>Профил</h1>
-
-        <nav id="profiletabs">
-            <ul class="clearfix">
-                <li><a href="#bio" class="sel">Инфо</a></li>
-                <li><a href="#contact">Контакт</a></li>
-            </ul>
-        </nav>
-
-        <section id="bio">
-            <p>Имена: Name + Family</p>
-            <p>Години: Age</p>
-        </section>
-
-        <section id="contact" class="hidden">
-            <p>асддасда</p>
-            <p>хййййй„</p>
-        </section>
-
     </div>
-
-
-    <!-- @end #content -->
 </div>
-
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
