--- a/showAll.html
+++ b/showAll.html
@@ -18,6 +18,7 @@
                         <li><a href="index.php#rides">Търся превоз</a></li>
                         <li><a href="index.php#rides">Предлагам превоз</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
@@ -32,6 +33,7 @@
                         <li><a href="index.php#rides">Търся превоз</a></li>
                         <li><a href="index.php#rides">Предлагам превоз</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
             </div>
