--- a/showFoundPosts.html
+++ b/showFoundPosts.html
@@ -14,9 +14,11 @@
             <div class="col-xs-12 col-sm-12 col-md-12">
                 <div class="menuDesktop">
                     <ul class="list-unstyled menuItems">
+                        <li><a href="index.php">Начало</a></li>
                         <li><a href="index.php#rides">Търся превоз</a></li>
                         <li><a href="index.php#rides">Предлагам превоз</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
                 <a href="#" class="menuMobile">
@@ -27,9 +29,11 @@
                         <li>
                             <span class="icon icon-rightArrow"></span>
                         </li>
+                        <li><a href="index.php">Начало</a></li>
                         <li><a href="index.php#rides">Търся превоз</a></li>
                         <li><a href="index.php#rides">Предлагам превоз</a></li>
                         <li><a href="index.php#aboutUs">Отзиви</a></li>
+                        <li><a href="profile.html">Профил</a></li>
                     </ul>
                 </div>
             </div>
