--- a/register.html
+++ b/register.html
@@ -72,7 +72,7 @@
             <?php endif; ?>
             <form method="post">
                 <div class="form-group">
-                    <label for="username" class="boxesName">Никнейм</label>
+                    <label for="username" class="boxesName">Потребителско име</label>
                     <input type="text" class="form-control" id="username" name="username">
                     <label for="firstName" class="boxesName">Име</label>
                     <input type="text" id="firstName" class="form-control" name="firstName">
