--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3 class="searchShow">Търся превоз</h3>
                     <div class="searchRideExpand">
                         <div class="alert alert-danger">
-                            <strong>Внимание!<br></strong> Моля влезте в профила си, за да публикувате - <a
+                            <strong>Внимание!<br></strong> Моля влезте в профила си, за да търсите публикации - <a
                                 href="login.php">ВХОД</a><br> Нямате акаунт? - <a href="register.php">РЕГИСТРАЦИЯ</a>
                         </div>
                     </div>
@@ -160,13 +160,13 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="centerButton">
+                <!--<div class="centerButton">
                     <form action="show-all-posts.php">
                         <button type="submit" class="btn btn-primary" id="seeAll" name="seeAll">
                             Виж всички
                         </button>
                     </form>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
